# Game-Telemetry-Data-Capture

./: CMakeLists.txt  README.md  README_zh-CN.md  package.json
Src/: CMakeLists.txt  main.cc  resource.qrc
Src/Data/: TelemetryDataBuffer.cc  TelemetryDataBuffer.h  TelemetryDataTableModel.cc  TelemetryDataTableModel.h
Src/Environment/: DefineQmlRegisterType.h  documentsPath.cc  registerQmlType.cc
Src/Game/: Capturer.cc  Capturer.h  CapturerWithUdp.cc  CapturerWithUdp.h  Game.cc  Game.h  GameInfoHelper.cc  GameInfoHelper.h  GameInfoHelperFileAnalysis.cc  GameInfoHelperFileAnalysis.h  GameManager.cc  GameManager.h  GameRunMonitoringHelper.cc  GameRunMonitoringHelper.h  GameWithUdp.cc  GameWithUdp.h  TelemetryDataBuffer.cc
Src/Game/Assetto Corsa/: ACGame.cc  ACGame.h  ACTelemetryDataCapturer.cc  ACTelemetryDataCapturer.h  SharedMemoryPacket.h
Src/Game/Assetto Corsa Competizione/: ACCGame.cc  ACCGame.h  ACCTelemetryDataCapturer.cc  ACCTelemetryDataCapturer.h  SharedMemoryPacket.h
Src/Game/DiRT 4/: Dirt4Game.cc  Dirt4Game.h  Dirt4TelemetryDataCapturer.cc  Dirt4TelemetryDataCapturer.h  UdpPacket.h
Src/Game/Dirt Rally 2.0/: DirtRally2Game.cc  DirtRally2Game.h  DirtRally2TelemetryDataCapturer.cc  DirtRally2TelemetryDataCapturer.h  UdpPacket.h
Src/Gui/: DividingLine.qml  GameInstallPathSettingItem.qml  GameItem.qml  GameList.qml  GameSettingPopup.qml  GameTelemetryConfigTutorialItem.qml  GameUDPSettingItem.qml  TelemetryDataView.qml  gui.qrc  main.qml  qtquickcontrols2.conf
Src/Information/: GameInfo.json
Src/Utils/: JsonFileAnalysis.cc  JsonFileAnalysis.h  VersionCompare.cc
Tests/: CMakeLists.txt
Tests/GameInfoReadWrite/: CMakeLists.txt  tst_GameInfoReadWrite.cc
Tests/GameRunMonitoring/: CMakeLists.txt  tst_GameRunMonitoring.cc
